--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ current_version = 0.18
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 
@@ -20,10 +20,10 @@ dists = clean --all sdist bdist_wheel
 
 [metadata]
 name = andebox
-url = https://github.com/russoz/andebox
+url = https://github.com/russoz-ansible/andebox
 project_urls = 
-	Bug Tracker = https://github.com/russoz/andebox/issues
-	Source Code = https://github.com/russoz/andebox
+	Bug Tracker = https://github.com/russoz-ansible/andebox/issues
+	Source Code = https://github.com/russoz-ansible/andebox
 description = Ansible Developer's Box
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -33,7 +33,7 @@ maintainer = Alexei Znamensky
 maintainer_email = russoz@gmail.com
 license = MIT
 license_file = LICENSE
-classifiers = 
+classifiers =
 	Development Status :: 2 - Pre-Alpha
 	
 	Environment :: Console
@@ -56,5 +56,5 @@ classifiers =
 	
 	Topic :: Software Development :: Testing
 	Topic :: Utilities
-keywords = 
+keywords =
 	ansible
