add Python 3.10 and 3.11 to classifiers

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39
+envlist = py36, py37, py38, py39, py310, py311
 skip_missing_interpreters = True
 
 [testenv]
@@ -25,7 +25,7 @@ allowlist_externals =
     twine
     bumpversion
     git
-depends = py36, py37, py38, py39
+depends = py36, py37, py38, py39, py310, py311
 commands =
     bumpversion --verbose {posargs}
     /bin/rm -rf dist/
