--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ current_version = 0.24
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 
@@ -21,10 +21,10 @@ dists = clean --all sdist bdist_wheel
 [metadata]
 name = andebox
 url = https://github.com/russoz-ansible/andebox
-project_urls = 
+project_urls =
 	Bug Tracker = https://github.com/russoz-ansible/andebox/issues
 	Source Code = https://github.com/russoz-ansible/andebox
-description = Ansible Developer's Box
+description = Ansible Developers Box
 long_description = file: README.md
 long_description_content_type = text/markdown
 author = Alexei Znamensky
@@ -33,28 +33,26 @@ maintainer = Alexei Znamensky
 maintainer_email = russoz@gmail.com
 license = MIT
 license_file = LICENSE
-classifiers = 
+classifiers =
 	Development Status :: 2 - Pre-Alpha
-	
 	Environment :: Console
 	Framework :: Ansible
-	
 	Intended Audience :: Developers
 	Intended Audience :: Information Technology
 	Intended Audience :: System Administrators
-	
 	Operating System :: OS Independent
-	
 	License :: OSI Approved :: MIT License
-	
 	Programming Language :: Python
 	Programming Language :: Python :: 3
 	Programming Language :: Python :: 3.6
 	Programming Language :: Python :: 3.7
 	Programming Language :: Python :: 3.8
 	Programming Language :: Python :: 3.9
-	
+	Programming Language :: Python :: 3.10
+	Programming Language :: Python :: 3.11
 	Topic :: Software Development :: Testing
 	Topic :: Utilities
-keywords = 
+keywords =
 	ansible
+	tox
+	vagrant
