make pylint happy

--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ commands =
 [testenv:pylint]
 deps = pylint
 commands =
-    pylint --rcfile=tox.ini andebox andeboxlib
+    pylint andebox andeboxlib
 
 [testenv:release]
 skip_tests = True
@@ -33,6 +33,3 @@ commands =
     git push --tags
     git push
     twine upload dist/*.tar.gz dist/*.whl
-
-[MESSAGES CONTROL]
-disable=C0301,C0103,C0114,C0115,C0116,C0209,W1514
