--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39
+envlist = py36, py37, py38, py39, py310, py311
 skip_missing_interpreters = True
 
 [testenv]
@@ -13,7 +13,7 @@ commands =
 [testenv:pylint]
 deps = pylint
 commands =
-    pylint --rcfile=tox.ini andebox andeboxlib
+    pylint andebox andeboxlib
 
 [testenv:release]
 skip_tests = True
@@ -25,7 +25,7 @@ allowlist_externals =
     twine
     bumpversion
     git
-depends = py36, py37, py38, py39
+depends = py36, py37, py38, py39, py310, py311
 commands =
     bumpversion --verbose {posargs}
     /bin/rm -rf dist/
@@ -33,6 +33,3 @@ commands =
     git push --tags
     git push
     twine upload dist/*.tar.gz dist/*.whl
-
-[MESSAGES CONTROL]
-disable=C0301,C0103,C0114,C0115,C0116,C0209,W1514
