add ./setup.py to externals in tox

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ allowlist_externals =
     twine
     bumpversion
     git
+    ./setup.py
 depends = py36, py37, py38, py39, py310, py311
 commands =
     bumpversion --verbose {posargs}
