--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36, py37, py38, py39, py310, py311
+envlist = py39, py310, py311
 skip_missing_interpreters = True
 
 [testenv]
@@ -26,7 +26,7 @@ allowlist_externals =
     bumpversion
     git
     ./setup.py
-depends = py36, py37, py38, py39, py310, py311
+depends = py39, py310, py311
 commands =
     bumpversion --verbose {posargs}
     /bin/rm -rf dist/
