--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ current_version = 0.39
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 
@@ -15,13 +15,17 @@ replace = version='{new_version}'
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
+[bumpversion:file:pyproject.toml]
+search = version = "{current_version}"
+replace = version = "{new_version}"
+
 [aliases]
 dists = clean --all sdist bdist_wheel
 
 [metadata]
 name = andebox
 url = https://github.com/russoz-ansible/andebox
-project_urls = 
+project_urls =
 	Bug Tracker = https://github.com/russoz-ansible/andebox/issues
 	Source Code = https://github.com/russoz-ansible/andebox
 description = Ansible Developers Box
@@ -33,7 +37,7 @@ maintainer = Alexei Znamensky
 maintainer_email = russoz@gmail.com
 license = MIT
 license_file = LICENSE
-classifiers = 
+classifiers =
 	Development Status :: 2 - Pre-Alpha
 	Environment :: Console
 	Framework :: Ansible
@@ -52,7 +56,7 @@ classifiers =
 	Programming Language :: Python :: 3.11
 	Topic :: Software Development :: Testing
 	Topic :: Utilities
-keywords = 
+keywords =
 	ansible
 	tox
 	vagrant
