--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,15 +14,17 @@ permissions:
 
 jobs:
   build:
-
+    strategy:
+      matrix:
+        python-version: ["3.9", "3.10", "3.11"]
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.9
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v
       with:
-        python-version: "3.9"
+        python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
