adjust bump2version config

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -7,7 +7,7 @@ serialize =
 	{major}.{minor}.{patch}
 	{major}.{minor}
 
-[bumpversion:file:andebox]
+[bumpversion:file:andeboxlib/cli.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
