--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -12,5 +12,5 @@ search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
 [bumpversion:file:pyproject.toml]
-search = version = \"{current_version}\"
-replace = version = \"{new_version}\"
+search = version = "{current_version}"
+replace = version = "{new_version}"
