adjust tox.ini to use poetry

--- a/tox.ini
+++ b/tox.ini
@@ -3,34 +3,57 @@ envlist = py39, py310, py311
 skip_missing_interpreters = True
 
 [testenv]
-passenv =
-    HOME
-    TWINE_USERNAME
-    TWINE_PASSWORD
+deps =
+    poetry
 commands =
-    ./setup.py build
+    poetry install
+    poetry run flake8 -v . --count --show-source --statistics
+    poetry build
 
-[testenv:pylint]
-deps = pylint
+[testenv:test]
+deps =
+    poetry
 commands =
-    pylint andebox andeboxlib
+    poetry install
+    poetry run flake8 -v . --count --show-source --statistics
+    poetry run pytest -v
+
+
+[testenv:test-release]
+skip_tests = True
+deps =
+    poetry
+allowlist_externals =
+    /bin/rm
+    poetry
+    git
+depends = py39, py310, py311
+passenv = POETRY_PYPI_TOKEN_TEST_PYPI
+commands =
+    poetry install
+    poetry run bumpversion --verbose --no-tag --no-commit --allow-dirty {posargs}
+    /bin/rm -rf dist/
+    poetry run flake8 -v . --count --show-source --statistics
+    poetry run pytest -v
+    poetry publish --build --repository test-pypi
+    git checkout .
 
 [testenv:release]
 skip_tests = True
 deps =
-    bump2version
-    twine
+    poetry
 allowlist_externals =
     /bin/rm
-    twine
-    bumpversion
+    poetry
     git
-    ./setup.py
 depends = py39, py310, py311
 commands =
-    bumpversion --verbose {posargs}
+    poetry install
+    poetry run bumpversion --verbose {posargs}
     /bin/rm -rf dist/
-    ./setup.py dists
+    poetry run flake8 -v . --count --show-source --statistics
+    poetry run pytest -v
+    poetry build
     git push --tags
     git push
-    twine upload dist/*.tar.gz dist/*.whl
+    poetry publish
