adjust tox.ini to use poetry

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ allowlist_externals =
     poetry
     git
 depends = py39, py310, py311
+passenv = POETRY_PYPI_TOKEN_PYPI
 commands =
     poetry install
     poetry run bumpversion --verbose {posargs}
