improve tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -3,57 +3,36 @@ envlist = py39, py310, py311
 skip_missing_interpreters = True
 
 [testenv]
-deps =
-    poetry
-commands =
-    poetry install
-    poetry run flake8 -v . --count --show-source --statistics
-    poetry build
-
-[testenv:test]
-deps =
-    poetry
+deps = poetry
+allowlist_externals = /bin/rm
 commands =
     poetry install
     poetry run flake8 -v . --count --show-source --statistics
     poetry run pytest -v
-
+    /bin/rm -rf build/ dist/
 
 [testenv:test-release]
-skip_tests = True
-deps =
-    poetry
+deps = poetry
 allowlist_externals =
     /bin/rm
-    poetry
     git
 depends = py39, py310, py311
 passenv = POETRY_PYPI_TOKEN_TEST_PYPI
 commands =
-    poetry install
+    {[testenv]commands}
     poetry run bumpversion --verbose --no-tag --no-commit --allow-dirty {posargs}
-    /bin/rm -rf dist/
-    poetry run flake8 -v . --count --show-source --statistics
-    poetry run pytest -v
     poetry publish --build --repository test-pypi
     git checkout .
 
 [testenv:release]
-skip_tests = True
-deps =
-    poetry
+deps = poetry
 allowlist_externals =
     /bin/rm
-    poetry
     git
-depends = py39, py310, py311
 passenv = POETRY_PYPI_TOKEN_PYPI
 commands =
-    poetry install
+    {[testenv]commands}
     poetry run bumpversion --verbose {posargs}
-    /bin/rm -rf dist/
-    poetry run flake8 -v . --count --show-source --statistics
-    poetry run pytest -v
     poetry build
     git push --tags
     git push
