--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,28 +20,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install poetry
-        poetry install
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        poetry run flake8 -v . --count --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        poetry run flake8 -v . --count --exit-zero --statistics
-    - name: Test with pytest
-      run: |
-        poetry run pytest -v
-    - name: Publish to Test PyPI
-      env:
-        POETRY_PYPI_TOKEN_TEST_PYPI: ${{ env.test_pypi_token }}
-      run: |
-        poetry config --local repositories.test-pypi https://test.pypi.org/legacy/
-        poetry publish --repository test-pypi
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install tox
+      - name: Test package
+        run: |
+          tox
+  # publish:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.11"
+  #     - name: Install dependencies
+  #         run: |
+  #           python -m pip install --upgrade pip
+  #           pip install tox
+  #     - name: Publish to Test PyPI
+  #       env:
+  #         POETRY_PYPI_TOKEN_TEST_PYPI: ${{ env.test_pypi_token }}
+  #       run: |
+  #         poetry config --local repositories.test-pypi https://test.pypi.org/legacy/
+  #         poetry publish --repository test-pypi
