add support for dev versions

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ allowlist_externals =
 passenv = POETRY_PYPI_TOKEN_TEST_PYPI
 commands =
     {[testenv]commands}
-    poetry run bumpversion --verbose --no-tag --no-commit --allow-dirty {posargs}
+    poetry run bumpversion --verbose --no-tag --no-commit --allow-dirty dev {posargs}
     poetry publish --build --repository test-pypi
     git checkout .
 
