--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,9 +2,11 @@
 current_version = 0.46
 commit = True
 tag = True
-parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?
-serialize = 
+parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?(?:\.dev(?P<dev>\d+))?
+serialize =
+	{major}.{minor}.{patch}.dev{dev}
 	{major}.{minor}.{patch}
+	{major}.{minor}.dev{dev}
 	{major}.{minor}
 
 [bumpversion:file:andeboxlib/cli.py]
