--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,5 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: Andebox application
 
 on:
   push:
@@ -30,24 +28,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install tox
       - name: Test package
-        run: |
-          tox
-  # publish:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: "3.11"
-  #     - name: Install dependencies
-  #         run: |
-  #           python -m pip install --upgrade pip
-  #           pip install tox
-  #     - name: Publish to Test PyPI
-  #       env:
-  #         POETRY_PYPI_TOKEN_TEST_PYPI: ${{ env.test_pypi_token }}
-  #       run: |
-  #         poetry config --local repositories.test-pypi https://test.pypi.org/legacy/
-  #         poetry publish --repository test-pypi
+        run: tox
