--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, py310, py311
+isolated_build = true
 skip_missing_interpreters = True
 
 [testenv]
@@ -19,9 +19,8 @@ allowlist_externals =
 passenv = POETRY_PYPI_TOKEN_TEST_PYPI
 commands =
     {[testenv]commands}
-    poetry run bumpversion --verbose --no-tag --no-commit --allow-dirty {posargs}
+    poetry run bumpversion --no-tag --no-commit --allow-dirty dev
     poetry publish --build --repository test-pypi
-    git checkout .
 
 [testenv:release]
 deps = poetry
@@ -31,6 +30,7 @@ allowlist_externals =
 passenv = POETRY_PYPI_TOKEN_PYPI
 commands =
     {[testenv]commands}
+    [[ $(git --show-current) == "main" ]] || exit 1
     poetry run bumpversion --verbose {posargs}
     poetry build
     git push --tags
