add branch-safeguard fo release

--- a/tox.ini
+++ b/tox.ini
@@ -27,10 +27,11 @@ deps = poetry
 allowlist_externals =
     /bin/rm
     git
+    /bin/bash
 passenv = POETRY_PYPI_TOKEN_PYPI
 commands =
     {[testenv]commands}
-    [[ $(git --show-current) == "main" ]] || exit 1
+    /bin/bash -c '[[ $(git branch --show-current) == "main" ]] || exit 1'
     poetry run bumpversion --verbose {posargs}
     poetry build
     git push --tags
