--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,15 +3,15 @@ current_version = 0.52
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?(?:\.dev(?P<dev>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}.dev{dev}
 	{major}.{minor}.{patch}
 	{major}.{minor}.dev{dev}
 	{major}.{minor}
 
 [bumpversion:file:andeboxlib/cli.py]
-search = __version__ = '{current_version}'
-replace = __version__ = '{new_version}'
+search = __version__ = "{current_version}"
+replace = __version__ = "{new_version}"
 
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
