remove trailing whitespace

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,4 +17,5 @@ repos:
     hooks:
       - id: fix-byte-order-marker
       - id: trailing-whitespace
+        exclude: ^.bumpversion\.cfg
       - id: end-of-file-fixer
