--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,16 @@
 [tox]
 isolated_build = true
 skip_missing_interpreters = True
+env_list =
+    py312
+    py311
+    py310
+    py39
 
 [testenv]
 deps = poetry
 allowlist_externals = /bin/rm
+passenv = VIRTUALENV_DISCOVERY
 commands =
     poetry install
     poetry run flake8 -v . --count --show-source --statistics
