--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Software Development :: Testing",
     "Topic :: Utilities"
 ]
@@ -38,20 +39,24 @@ andebox = "andeboxlib.cli:run"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-ansible-core = "^2.12.0"
+ansible-core = [
+    { version = "^2.17.0", python = ">=3.12" },
+    { version = "^2.15.0", python = ">=3.9,<3.12" },
+]
 pyyaml = ">=5.4"
 python-vagrant = "^1.0.0"
 fabric = "^3.1.0"
 decorator = "^5.1.1"
 looseversion = "^1.2.0"
 tox = "^4.5.2"
+virtualenv-pyenv = "*"
+bump2version = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
 pytest-mock = "^3.10.0"
 pylint = "^2.17.4"
 flake8 = "^6.0.0"
-bump2version = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
