add tox -e deps to update dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,10 @@ env_list =
 
 [testenv]
 deps = poetry
-allowlist_externals = /bin/rm
+allowlist_externals =
+    /bin/rm
+    git
+    /bin/bash
 passenv = VIRTUALENV_DISCOVERY
 commands =
     poetry install
@@ -17,11 +20,21 @@ commands =
     poetry run pytest -v
     /bin/rm -rf build/ dist/
 
-[testenv:test-release]
+[testenv:deps]
 deps = poetry
 allowlist_externals =
     /bin/rm
     git
+    /bin/bash
+commands =
+    poetry update
+    poetry lock
+    git add poetry.lock
+    git commit -m 'Update project dependencies'
+    git push
+
+[testenv:test-release]
+deps = poetry
 passenv = POETRY_PYPI_TOKEN_TEST_PYPI
 commands =
     {[testenv]commands}
