--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ looseversion = "^1.2.0"
 tox = "^4.5.2"
 virtualenv-pyenv = "*"
 bump2version = "^1.0.1"
+ruamel-yaml = "^0.18.6"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.3.1"
