--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ pytest = ">=7.3.1,<9.0.0"
 pytest-mock = "^3.10.0"
 pylint = ">=2.17.4,<4.0.0"
 flake8 = ">=6,<8"
+gitpython = ">=3.1.44"
 
 [build-system]
 requires = ["poetry-core"]
