tox.ini: pass arguments to pytest

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ passenv = VIRTUALENV_DISCOVERY
 commands =
     poetry install
     poetry run flake8 -v . --count --show-source --statistics
-    poetry run pytest -v
+    poetry run pytest -v {posargs}
     /bin/rm -rf build/ dist/
 
 [testenv:deps]
