--- a/tox.ini
+++ b/tox.ini
@@ -48,10 +48,13 @@ allowlist_externals =
     /bin/bash
 passenv = POETRY_PYPI_TOKEN_PYPI
 commands =
-    {[testenv]commands}
+    poetry install
+    poetry run flake8 -v . --count --show-source --statistics
+    poetry run pytest -v
     /bin/bash -c '[[ $(git branch --show-current) == "main" ]] || exit 1'
     poetry run bumpversion --verbose {posargs}
     poetry build
     git push --tags
     git push
     poetry publish
+    /bin/rm -rf build/ dist/
