--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ tox = "^4.5.2"
 virtualenv-pyenv = "*"
 bump2version = "^1.0.1"
 ruamel-yaml = "^0.18.6"
+argcomplete = "^3.5.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<9.0.0"
