--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,11 +3,7 @@ current_version = 0.76
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?(?:\.dev(?P<dev>\d+))?
-serialize = 
-	{major}.{minor}.{patch}.dev{dev}
-	{major}.{minor}.{patch}
-	{major}.{minor}.dev{dev}
-	{major}.{minor}
+serialize = {major}.{minor}.{patch}.dev{dev},{major}.{minor}.{patch},{major}.{minor}.dev{dev},{major}.{minor}
 
 [bumpversion:file:andeboxlib/cli.py]
 search = __version__ = "{current_version}"
