--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,16 +1,21 @@
 
-name: Andebox application
+name: Test andebox
+
+permissions:
+  contents: read
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
+  workflow_call:
 
 permissions:
   contents: read
 
 jobs:
+  call-tests:
+    uses: ./.github/workflows/ci-tests.yml
+    secrets: inherit
   build:
     strategy:
       matrix:
@@ -20,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
