--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           poetry run bumpversion --verbose minor
           poetry build
+          git push --tags
           git push
 
       - name: Publish to PyPI
