--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ looseversion = "^1.2.0"
 tox = "^4.5.2"
 ruamel-yaml = "^0.18.6"
 argcomplete = "^3.5.3"
+pytest-diff = "^0.1.14"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<9.0.0"
