--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,11 @@ bump2version = "^1.0.1"
 pylint = ">=2.17.4,<4.0.0"
 flake8 = ">=6,<8"
 gitpython = ">=3.1.44"
+pre-commit = "^4.2.0"
+
+[tool.poetry.group.docs.dependencies]
+sphinx = "^8.2.3"
+furo = "^2024.8.6"
 
 [build-system]
 requires = ["poetry-core"]
