--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,7 +3,7 @@ current_version = 0.80
 commit = True
 tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)(?:\.(?P<patch>\d+))?(?:\.dev(?P<dev>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}.dev{dev}
 	{major}.{minor}.{patch}
 	{major}.{minor}.dev{dev}
@@ -16,3 +16,7 @@ replace = __version__ = "{new_version}"
 [bumpversion:file:pyproject.toml]
 search = version = "{current_version}"
 replace = version = "{new_version}"
+
+[bumpversion:file:docs/conf.py]
+search = release = "{current_version}"
+replace = release = "{new_version}"
