add docs action to tox

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,13 @@ commands =
     poetry run pytest -v {posargs}
     /bin/rm -rf build/ dist/
 
+[testenv:docs]
+deps = poetry
+commands =
+    poetry install
+    /bin/rm -rf build/ dist/ docs/_build
+    poetry run sphinx-build -b html docs docs/_build/html
+
 [testenv:deps]
 deps = poetry
 allowlist_externals =
