--- a/tox.ini
+++ b/tox.ini
@@ -65,3 +65,19 @@ commands =
     git push
     poetry publish
     /bin/rm -rf build/ dist/
+
+[testenv:semantic-release]
+deps = poetry
+allowlist_externals =
+    /bin/rm
+    git
+    /bin/bash
+passenv =
+    POETRY_PYPI_TOKEN_PYPI
+    GH_TOKEN
+    GITHUB_TOKEN
+commands =
+    poetry install
+    poetry run semantic-release version
+    poetry run semantic-release publish
+    /bin/rm -rf build/ dist/
