--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,10 +4,11 @@ permissions:
   contents: write
 
 on:
-  push:
-    tags:
-      - "v[0-9]+.[0-9]+.[0-9]+*"
-    branches: [main]
+  workflow_dispatch:  # Manual trigger only for now
+  # push:
+  #   tags:
+  #     - "v[0-9]+.[0-9]+.[0-9]+*"
+  #   branches: [main]
 
 jobs:
   release:
