--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,5 +1,8 @@
 name: Semantic Release
 
+permissions:
+  contents: write
+
 on:
   workflow_dispatch:  # Manual trigger only for now
 
@@ -15,7 +18,6 @@ jobs:
     - uses: actions/checkout@v4
       with:
         fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Python Setup
       uses: actions/setup-python@v5
@@ -25,16 +27,15 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry python-semantic-release
+        pip install poetry
 
     - name: Configure Git
       run: |
-        git config --global user.name "github-actions"
-        git config --global user.email "action@github.com"
+        git config user.name "github-actions[bot]"
+        git config user.email "github-actions[bot]@users.noreply.github.com"
 
     - name: Create Release
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
       run: |
         poetry install
