feat(semantic-release): add pypi as provider for publishing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -89,3 +89,7 @@ major_on_zero = true
 tag_format = "v{version}"
 parse_version_from_tag = true
 version_pattern = "v(?P<version>\\d+\\.\\d+(\\.\\d+)?)"
+[tool.semantic_release.publish]
+upload_to_vcs_release = true
+upload_to_repository = true
+repository = "pypi"
