feat(semantic-release): add pypi as provider for publishing, again

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,8 +88,13 @@ commit_parser = "conventional"
 major_on_zero = true
 tag_format = "v{version}"
 parse_version_from_tag = true
-version_pattern = "v(?P<version>\\d+\\.\\d+(\\.\\d+)?)"
+version_pattern = "v(?P<version>\\d+\\.\\d+\\.\\d+)"
+
 [tool.semantic_release.publish]
 upload_to_vcs_release = true
 upload_to_repository = true
-repository = "pypi"
+
+[tool.semantic_release.publish.pypi]
+build = true
+dist_dir = "dist"
+providers = ["poetry"]
