--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -40,5 +40,5 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         poetry install
-        poetry run semantic-release version
-        poetry run semantic-release publish
+        poetry run semantic-release --verbose version
+        poetry run semantic-release --verbose publish
