feat(semantic-release): adjust workflow, rename tox action

--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands =
     {[testenv]commands}
     poetry publish --build --repository test-pypi
 
-[testenv:semantic-release]
+[testenv:release]
 deps = poetry
 allowlist_externals =
     /bin/rm
