fix(semantic-release): adjust wf and project defs

--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -2,6 +2,8 @@ name: Semantic Release
 
 permissions:
   contents: write
+  issues: write
+  pull-requests: write
 
 on:
   workflow_dispatch:  # Manual trigger only for now
