fix(semantic-release): adjust remote in pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,4 +97,5 @@ upload_to_vcs_release = true
 
 [tool.semantic_release.remote]
 type = "github"
-name = "russoz-ansible/andebox"
+token = "GITHUB_TOKEN"
+repository = "russoz-ansible/andebox"
