--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,5 +97,5 @@ upload_to_vcs_release = true
 
 [tool.semantic_release.remote]
 type = "github"
-token = "GITHUB_TOKEN"
+token = "GH_TOKEN"
 repository = "russoz-ansible/andebox"
