--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
-version_variable = [
+version_variables = [
     "andeboxlib/cli.py:__version__",
     "docs/conf.py:release"
 ]
