test(reports): add junit-style and coverage report

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -35,4 +35,15 @@ jobs:
         run: poetry run flake8 -v . --count --show-source --statistics
 
       - name: Run tests
-        run: poetry run pytest -v
+        run: |
+          poetry run pytest -v \
+            --cov-branch \
+            --cov-report=xml \
+            --cov-report=term \
+            --junitxml=junit.xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
