--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,8 @@ gitpython = ">=3.1.44"
 pre-commit = "^4.2.0"
 python-semantic-release = "^9.21.1"
 commitizen = "^4.8.0"
+pytest-cov = "^6.1.1"
+junit-xml = "^1.9"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.2.3"
