--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,8 @@
+# Copyright (c) 2025, Alexei Znamensky
+# All rights reserved.
+#
+# This file is part of the Andebox project and is distributed under the terms
+# of the BSD 3-Clause License. See LICENSE file for details.
+
 [MESSAGES CONTROL]
 disable=C0301,C0103,C0114,C0115,C0116,C0209,W1514,R1735
