--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,9 @@
+# Copyright (c) 2025, Alexei Znamensky
+# All rights reserved.
+#
+# This file is part of the Andebox project and is distributed under the terms
+# of the BSD 3-Clause License. See LICENSE file for details.
+
 [tox]
 isolated_build = true
 skip_missing_interpreters = True
