--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,7 @@
 # Pytest configuration for coverage and JUnit XML reporting
 [pytest]
 addopts =
-    --cov=andeboxlib --cov-report=term-missing
+    --cov=andebox --cov-report=term-missing
     --cov-report=html:htmlcov
     --junitxml=junit.xml
 
