chore(devcontainer): fix structure, add vscode plugins

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
     "context": ".."
   },
   "features": {
-      "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    "ghcr.io/devcontainers/features/docker-in-docker:2": {}
   },
   "mounts": [
     "source=${localEnv:SSH_AUTH_SOCK},target=/ssh-agent,type=bind"
@@ -13,15 +13,25 @@
   "remoteEnv": {
     "SSH_AUTH_SOCK": "/ssh-agent"
   },
-  "settings": {
-    "terminal.integrated.shell.linux": "/bin/bash",
-    "python.pythonPath": "/usr/local/bin/python"
+  "customizations": {
+    "vscode": {
+      "settings": {
+        "terminal.integrated.shell.linux": "/bin/bash",
+        "python.pythonPath": "/usr/local/bin/python"
+      },
+      "extensions": [
+        "ms-python.python",
+        "esbenp.prettier-vscode",
+        "ms-python.vscode-pylance",
+        "chrislajoie.vscode-modelines",
+        "wayou.vscode-todo-highlight",
+        "redhat.vscode-yaml",
+        "trond-snekvik.simple-rst",
+        "oderwat.indent-rainbow",
+        "michelemelluso.gitignore"
+      ]
+    }
   },
-  "extensions": [
-    "ms-python.python",
-    "esbenp.prettier-vscode",
-    "ms-python.vscode-pylance"
-  ],
   "remoteUser": "vscode",
   "postCreateCommand": "poetry install --no-interaction --with dev,docs && pre-commit install --install-hooks && mkdir -p ~/.ssh && chmod 700 ~/.ssh"
 }
