test(coverage): add definition for excluded lines

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,5 +14,14 @@ testpaths =
     tests
 
 [coverage:run]
-omit =
-    andebox/__main__.py
+data_file = /tmp/.coverage
+parallel = True
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise NotImplementedError
+    if __name__ == "__main__":
+    pass
+    raise ImportError
