--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ name: Semantic Release
 permissions: {}  # remove top-level permissions
 
 on:
-  workflow_dispatch:  # Manual trigger only for now
+  workflow_dispatch:
   push:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
