--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ andebox = "andebox.cli:run"
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/russoz-ansible/andebox/issues"
 "Source Code" = "https://github.com/russoz-ansible/andebox"
+"Documentation" = "https://andebox.readthedocs.io/en/latest/index.html"
 
 [tool.poetry.dependencies]
 python = "^3.11"
