chore: ensure --cover=xml is passed to pytest

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,8 +6,10 @@
 
 [pytest]
 addopts =
-    --cov=andebox --cov-report=term-missing
+    --cov=andebox
+    --cov-report=term-missing
     --cov-report=html:htmlcov
+    --cov-report=xml
     --junitxml=junit.xml
 
 testpaths =
