--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ tox = "^4.5.2"
 ruamel-yaml = "^0.18.6"
 argcomplete = "^3.5.3"
 pytest-diff = "^0.1.14"
+antsibull-docs = "^2.16.3"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.3.1,<9.0.0"
