chore(devcontainer): change the name of the devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "My Project Dev Container",
+  "name": "Andebox Dev Container",
   "build": {
     "dockerfile": "Dockerfile",
     "context": ".."
