--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ python-semantic-release = ">=9.21.1,<11.0.0"
 commitizen = "^4.8.0"
 pytest-cov = "^6.1.1"
 junit-xml = "^1.9"
+pytest-skip-slow = "^0.0.5"
 
 [tool.poetry.group.docs.dependencies]
 sphinx = "^8.2.3"
