chore(license): make project SPDX compliant

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+#
+# (C) 2025 Alexei Znamensky
+# Licensed under the MIT License. See LICENSES/MIT.txt for details.
+# SPDX-FileCopyrightText: 2025 Alexei Znamensky
+# SPDX-License-Identifier: MIT
+#
+
 # Local configuration
 .env
 
